# src/Altinn.App.Core/Features/Payment/Models/Payer.cs
@@ -1,0 +1,9 @@
+﻿namespace Altinn.App.Core.Features.Payment.Models;
+
+public class Payer
+{
+    public PayerPrivatePerson? PrivatePerson { get; set; }
+    public PayerCompany? Company { get; set; }
+    public Address? ShippingAddress { get; set; }
+    public Address? BillingAddress { get; set; }
+}
