# src/Altinn.App.Core/Features/Payment/Models/PayerCompany.cs
@@ -1,0 +1,8 @@
+namespace Altinn.App.Core.Features.Payment.Models;
+
+public class PayerCompany
+{
+    public string? OrganisationNumber { get; set; }
+    public string? Name { get; set; }
+    public PayerPrivatePerson? ContactPerson { get; set; }
+}
