# src/Altinn.App.Core/Features/Payment/Models/PaymentReceiver.cs
@@ -1,0 +1,8 @@
+namespace Altinn.App.Core.Features.Payment.Models;
+
+public class PaymentReceiver
+{
+    public string OrganisationNumber { get; set; }
+    public string Name { get; set; }
+    public Address PostalAddress { get; set; }
+}
